--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ APP_FALLBACK_LOCALE=en
 ADMIN_HOST=
 MAIN_HOST=
 API_HOST=
+ADMIN_DOMAIN=
+API_DOMAIN=
 
 #database connection password
 DB_PASSWORD=?
